...
                            print("failed")
                            
                        }) {
                            Circle()
                                .fill(Color.red.opacity(0.25))
                                .overlay(
                                    Text("Failed")
                                        .foregroundStyle(Color.red)
                                )
                                .frame(width: 80)
                        }
                        
                        Spacer()
...
                            stopwatch.startFormattedTime()
                            print("done")
                        }) {
                            Circle()
                                .fill(Color.green.opacity(0.25))
                                .overlay(
                                    Text("Done")
                                        .foregroundStyle(Color.green)
                                )
                                .frame(width: 80)
                        }
                    }
                    .padding([.leading, .trailing], 15)
...
                            stopwatch.resetFormattedTime()
                            stopwatch.resetFormattedTimeMS()
                            isSession = false
                            UserDefaults.standard.set(false, forKey: "isSession")
                            
                        }) {
                            Text("End Workout")
                                .font(.subheadline)
                                .frame(maxWidth: .infinity)
                                .padding(.vertical, 8)

                                .foregroundStyle(.white)
                                .clipShape(RoundedRectangle(cornerRadius: 12))
...
